# ircstore

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: deploy.yml  release.yml
src/: lib.rs
static/: help.html  index.html
