[package]
name = "ircstore"
version = "0.1.1"
edition = "2021"

[lib]
name = "ircstore"
path = "src/lib.rs"

[[bin]]
name = "ircstore"
path = "src/bin/indexer.rs"

[[bin]]
name = "ircstore-web"
path = "src/bin/web.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
streamstore = "0.19"
tokio = { version = "1", features = ["full"] }
irc = { version = "0.15", features = ["tls-native"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
notify = "6"
base64 = "0.21"
async-stream = "0.3"
dotenv = "0.15"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-gzip", "cors"] }
http = "1"
